# ComfyUI_MS_Diffusion

./: MS_Diffusion.py  README-CN.md  README.md  __init__.py  pyproject.toml  requirements.txt
config/: lora.yaml
examples/: controlnet.json  img2img.json  ms_new.json  normal.json  txt2img.json  workflow_new.json
ip_adapter/: __init__.py
msdiffusion/models/: model.py
utils/: style_template.py
